added scoring system

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 API_TOKEN_PROD=7974083015:AAGv7PustiY-eJfDtT2q9ZSE6r2t9SLTS80
 API_TOKEN_TEST=7300885902:AAHp99Wki_VnVmKco65G4uj7DUyXm2h880A
 CHANNEL_ID=-1001510695025
+# CHANNEL_ID=-1002330422139
